--- a/roles/ansible-nrpe/templates/commands3.cfg.j2
+++ b/roles/ansible-nrpe/templates/commands3.cfg.j2
@@ -1,6 +1,6 @@
 command[check_pgsql]=/usr/lib/nagios/plugins/check_pgsql -H localhost -d expman_production -l expman -p RX.._iYdeoONTt6d-ILH
 command[check_elasticsearch_cluster]=/usr/lib/nagios/plugins/check_elasticsearch_cluster.rb --ip localhost --port 9200
-command[check_nginx_status]=sudo /usr/lib/nagios/plugins/check_nginx_status.sh 107.170.177.239 80 nginx_status
+command[check_nginx_status]=sudo /usr/lib/nagios/plugins/check_nginx_status.sh {{nagios_nrpe_ip}} 80 nginx_status
 command[check_disk]=/usr/lib/nagios/plugins/check_disk -w 10% -c 5% -p /
 command[check_load_nrpe]=/usr/lib/nagios/plugins/check_load -w 5.0,4.0,3.0 -c 10.0,6.0,4.0
 command[check_procs_nrpe]=/usr/lib/nagios/plugins/check_procs -w 10 -c 20 --metric CPU
