--- a/roles/ansible-nrpe/templates/commands3.cfg.j2
+++ b/roles/ansible-nrpe/templates/commands3.cfg.j2
@@ -1,4 +1,4 @@
-command[check_pgsql]=/usr/lib/nagios/plugins/check_pgsql -H localhost -d expman_production -l expman -p RX.._iYdeoONTt6d-ILH
+command[check_pgsql]=/usr/lib/nagios/plugins/check_pgsql -H localhost -d {{database_name}} -l {{database_user}} -p {{database_password}}
 command[check_elasticsearch_cluster]=/usr/lib/nagios/plugins/check_elasticsearch_cluster.rb --ip localhost --port 9200
 command[check_nginx_status]=sudo /usr/lib/nagios/plugins/check_nginx_status.sh {{nagios_nrpe_ip}} 80 nginx_status
 command[check_disk]=/usr/lib/nagios/plugins/check_disk -w 10% -c 5% -p /
@@ -7,8 +7,8 @@ command[check_procs_nrpe]=/usr/lib/nagios/plugins/check_procs -w 10 -c 20 --metr
 command[check_http_nrpe]=/usr/lib/nagios/plugins/check_http -H localhost
 command[check_ssh_nrpe]=/usr/lib/nagios/plugins/check_ssh localhost
 command[check_ping_nrpe]=/usr/lib/nagios/plugins/check_ping -H localhost -w 100.0,20% -c 500.0,60%
-command[check_pg_connection]=/usr/lib/nagios/plugins/check_postgres.pl --action=connection --dbuser=expman --db=expman_production --dbpass=RX.._iYdeoONTt6d-ILH --host=localhost
-command[check_bloat]=/usr/lib/nagios/plugins/check_postgres.pl --action=bloat --dbuser=expman --db=expman_production --dbpass=RX.._iYdeoONTt6d-ILH --host=localhost --warning='100 M' --critical='200 M'
-command[check_backends]=/usr/lib/nagios/plugins/check_postgres.pl --action=backends --dbuser=expman --db=expman_production --dbpass=RX.._iYdeoONTt6d-ILH --host=localhost --warning='150' --critical='150'
-command[check_db_size]=/usr/lib/nagios/plugins/check_postgres.pl --action=database_size --dbuser=expman --db=expman_production --dbpass=RX.._iYdeoONTt6d-ILH --host=localhost --warning='450 GB' --critical='500 GB'
-command[check_query_time]=/usr/lib/nagios/plugins/check_postgres.pl --action=query_time --dbuser=expman --db=expman_production --dbpass=RX.._iYdeoONTt6d-ILH --host=localhost --warning=20s --critical=40s --port=5432
+command[check_pg_connection]=/usr/lib/nagios/plugins/check_postgres.pl --action=connection --dbuser={{database_user}} --db={{database_name}} --dbpass={{database_password}} --host=localhost
+command[check_bloat]=/usr/lib/nagios/plugins/check_postgres.pl --action=bloat --dbuser={{database_user}} --db={{database_name}} --dbpass={{database_password}} --host=localhost --warning='100 M' --critical='200 M'
+command[check_backends]=/usr/lib/nagios/plugins/check_postgres.pl --action=backends --dbuser={{database_user}} --db={{database_name}} --dbpass={{database_password}} --host=localhost --warning='150' --critical='150'
+command[check_db_size]=/usr/lib/nagios/plugins/check_postgres.pl --action=database_size --dbuser={{database_user}} --db={{database_name}} --dbpass={{database_password}} --host=localhost --warning='450 GB' --critical='500 GB'
+command[check_query_time]=/usr/lib/nagios/plugins/check_postgres.pl --action=query_time --dbuser={{database_user}} --db={{database_name}} --dbpass={{database_password}} --host=localhost --warning=20s --critical=40s --port=5432
